; ModuleID = '/home/carl/AnghaBench/i3/src/extr_con.c_con_mark_toggle.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_con.c_con_mark_toggle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"Toggling mark \22%s\22 on con = %p.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @con_mark_toggle(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load i8*, i8** %5, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @DLOG(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i8* %11, i32* %12)
  %14 = load i32*, i32** %4, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i64 @con_has_mark(i32* %14, i8* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %3
  %19 = load i32*, i32** %4, align 8
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @con_unmark(i32* %19, i8* %20)
  br label %27

22:                                               ; preds = %3
  %23 = load i32*, i32** %4, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @con_mark(i32* %23, i8* %24, i32 %25)
  br label %27

27:                                               ; preds = %22, %18
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @DLOG(i8*, i8*, i32*) #1

declare dso_local i64 @con_has_mark(i32*, i8*) #1

declare dso_local i32 @con_unmark(i32*, i8*) #1

declare dso_local i32 @con_mark(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
